force-app/main/default/objects/Event__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <label>Event</label>
    <type>Date</type>
</CustomField>