force-app/main/default/objects/Event__c/fields/Event_Budget__c.field-meta.xml
<CustomField>
    <fullName>Event_Budget__c</fullName>
    <description>Client__c, Vendor__c, Venue__c, Feedback__c, and EventVendor__c</description>
    <label>Event Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>