force-app/main/default/objects/Event__c/fields/Event_Budget_Custom__c.field-meta.xml
<CustomField>
    <fullName>Event_Budget_Custom__c</fullName>
    <formula>CASE(
  TEXT(Event_Type__c),
  &quot;Wedding&quot;, 50000,
  &quot;Corporate&quot;, 30000,
  &quot;Birthday&quot;, 10000,
  &quot;Anniversary&quot;, 20000,
  &quot;Festival&quot;, 60000,
  &quot;Concert&quot;, 40000,
  &quot;Other&quot;, 15000,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Event Budget Custom</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>