force-app/main/default/objects/Event__c/fields/Event_Type_Custom__c.field-meta.xml
<CustomField>
    <fullName>Event_Type_Custom__c</fullName>
    <label>Event Type Custom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wedding</fullName>
            </value>
            <value>
                <fullName>Corporate</fullName>
            </value>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Anniversary</fullName>
            </value>
            <value>
                <fullName>Festival</fullName>
            </value>
            <value>
                <fullName>Concert</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>