force-app/main/default/objects/Event__c/fields/Venue_Custom__c.field-meta.xml
<CustomField>
    <fullName>Venue_Custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Venue Custom</label>
    <referenceTo>Venue__c</referenceTo>
    <relationshipLabel>Events (Venue Custom)</relationshipLabel>
    <relationshipName>Events1</relationshipName>
    <type>Lookup</type>
</CustomField>